--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Inter:wght@300;400;500&display=swap');
 
+:root {
+  --animate-duration: 300ms;
+}
+
 *,
 *::before,
 *::after {
@@ -44,6 +48,10 @@ body::-webkit-scrollbar-thumb {
 
 .App-Anchor {
   scroll-margin-top: 5rem;
+}
+
+.App-Header {
+  transition: background-color 0.3s;
 }
 
 .App-Header.hidden {
